dhall/tests/type-inference/failure/unit/CompletionWithWrongDefaultType.txt
Type error: error: annot mismatch: { id : Optional Natural, name : Bool } != { id : Optional Natural, name : Text }
 --> <current file>:1:4
  |
...
6 | in  Example::{=}
  |     ^^^^^^^^^^^^ annot mismatch: { id : Optional Natural, name : Bool } != { id : Optional Natural, name : Text }
  |
